Revising and refactoring tests